fix table overflow

--- a/page_replacement_src/style.css
+++ b/page_replacement_src/style.css
@@ -17,9 +17,10 @@
     top: 35%;
     left: 20%;
     width: 60%;
+    max-height: 40%;
 
     overflow: auto;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: stable both-edges;
 }
 
 th:first-child {
